test/langtools/tools/javac/lambda/methodReference/MethodReferenceInConstructorInvocation.out
MethodReferenceInConstructorInvocation.java:20:21: compiler.err.cant.ref.before.ctor.called: super
1 error
